Refer to testnet rather than main

--- a/dangling_references_with_objects/Move.toml
+++ b/dangling_references_with_objects/Move.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 
 [dependencies.AptosFramework]
 git = "https://github.com/aptos-labs/aptos-core.git"
-rev = "main"
+rev = 'testnet'
 subdir = "aptos-move/framework/aptos-framework"
 
 [dependencies.AptosTokenObjects]
 git = "https://github.com/aptos-labs/aptos-core.git"
-rev = "main"
+rev = 'testnet'
 subdir = "aptos-move/framework/aptos-token-objects"
 
 [addresses]
